[tool.poetry]
name = "dev-toolkit"
version = "0.1.0"
description = ""
authors = ["Artemis Resende <artemis@aresende.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
click = "^8.1.7"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
